Move /participants to /participant-profiles
